--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/imagenes/code.png" alt="Logo de code"> 
+        <img class="logo" src="./imagenes/code.png" alt="Logo de code"> 
     </header>
     <main>
         <section>
